2005-04-09  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/README: updated requirements for OS & developer tool
	versions + other small fixes/cleanup.

	* macosx/tkMacOSXEntry.c (ComputeIncDecParameters): manually define
	constants present only in 10.3 headers so that we can build on 10.2.
	
	* macosx/Wish.pbproj/project.pbxproj: fixed absolute path to 
	tkEntry.h that confused 10.2 PBX.
	
	* unix/tcl.m4 (Darwin): added -single_module linker flag to
	TCL_SHLIB_LD_EXTRAS and TK_SHLIB_LD_EXTRAS.
	* unix/configure: autoconf-2.13

2005-03-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tcl.m4, win/configure: do not require cygpath in macros to
	allow msys alone as an alternative.

2005-03-24  Jim Ingham  <jingham@apple.com>

        These changes allow us to draw the Entry and Spinbox widget
	with a native look and feel on Mac OS X.

	* generic/tkEntry.h: New file, extracting the definitions of
	Entry and Spinbox.
	* generic/tkEntry.c (DisplayEntry): Call out to
	TkpDrawEntryBorderAndFocus and TkpDrawSpinboxButtons.  Also
	provide default implementations for X11 & Win.
	* macosx/tkMacOSXEntry.c: New file, implements the entry & focus
	and spinbox button drawing.
	* tkMacOSXDefaults.h: Change the Mac OS X defaults so they fit
	the native widget shapes.
	
	* xlib/xgc.c (XCreateGC): Set the default linewidth to 1, not
	0.  Some extensions seem to expect this.
	
2005-03-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tcl.m4:    Updated for OpenBSD and regenerated the configure
	* unix/configure: script

2005-03-11  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXButton.c (TkpDisplayButton): Set the port to
	the Button window's port BEFORE you set the clip, otherwise you 
	are setting the clip on the wrong window!
	Also, a little cleanup - move x & y into the branches where they are
	used, and don't compute the TextAnchor if we are using the native 
	button text, since we aren't going to use it.